fix spacing "valeur"

--- a/src/scss/partials/responsive/_accueil.scss
+++ b/src/scss/partials/responsive/_accueil.scss
@@ -22,7 +22,7 @@
     }
     &__valeurs{
         flex-direction: column;
-        margin-top: 60px;
+        margin-top: 30px;
         padding: 30px;
         &__leftDiv{
             width: 100%;
